zamna-spin/bindings/http_trigger.h

typedef struct http_trigger_string_t {
  uint8_t*ptr;
  size_t len;
} http_trigger_string_t;
typedef struct {
  uint8_t *ptr;
  size_t len;
} http_trigger_list_u8_t;
typedef struct {
  http_trigger_string_t *ptr;
  size_t len;
} http_trigger_list_string_t;
// Errors related to interacting with Redis
typedef struct fermyon_spin_2_0_0_redis_error_t {
  uint8_t tag;
  union {
    http_trigger_string_t     other;
  } val;
} fermyon_spin_2_0_0_redis_error_t;
// The message payload.
typedef struct fermyon_spin_2_0_0_redis_payload_t {
  uint8_t   *ptr;
  size_t len;
} fermyon_spin_2_0_0_redis_payload_t;
// A parameter type for the general-purpose `execute` function.
typedef struct fermyon_spin_2_0_0_redis_redis_parameter_t {
  uint8_t tag;
  union {
    int64_t     int64;
    fermyon_spin_2_0_0_redis_payload_t     binary;
  } val;
} fermyon_spin_2_0_0_redis_redis_parameter_t;
// A return type for the general-purpose `execute` function.
typedef struct fermyon_spin_2_0_0_redis_redis_result_t {
  uint8_t tag;
  union {
    http_trigger_string_t     status;
    int64_t     int64;
    fermyon_spin_2_0_0_redis_payload_t     binary;
  } val;
} fermyon_spin_2_0_0_redis_redis_result_t;
typedef struct {
  bool is_err;
  union {
    int64_t ok;
    fermyon_spin_2_0_0_redis_error_t err;
  } val;
} fermyon_spin_2_0_0_redis_result_s64_error_t;
typedef struct {
  bool is_err;
  union {
    uint32_t ok;
    fermyon_spin_2_0_0_redis_error_t err;
  } val;
} fermyon_spin_2_0_0_redis_result_u32_error_t;
typedef struct {
  bool is_err;
  union {
    http_trigger_list_string_t ok;
    fermyon_spin_2_0_0_redis_error_t err;
  } val;
} fermyon_spin_2_0_0_redis_result_list_string_error_t;
typedef struct {
  fermyon_spin_2_0_0_redis_redis_parameter_t *ptr;
  size_t len;
} fermyon_spin_2_0_0_redis_list_redis_parameter_t;
typedef struct {
  fermyon_spin_2_0_0_redis_redis_result_t *ptr;
  size_t len;
} fermyon_spin_2_0_0_redis_list_redis_result_t;
typedef struct {
  bool is_err;
  union {
    fermyon_spin_2_0_0_redis_list_redis_result_t ok;
    fermyon_spin_2_0_0_redis_error_t err;
  } val;
} fermyon_spin_2_0_0_redis_result_list_redis_result_error_t;
// Errors related to interacting with Mqtt
typedef struct fermyon_spin_2_0_0_mqtt_error_t {
  uint8_t tag;
  union {
    http_trigger_string_t     connection_failed;
    http_trigger_string_t     other;
  } val;
} fermyon_spin_2_0_0_mqtt_error_t;
// QoS for publishing Mqtt messages
typedef uint8_t fermyon_spin_2_0_0_mqtt_qos_t;
typedef struct fermyon_spin_2_0_0_mqtt_own_connection_t {
  int32_t __handle;
} fermyon_spin_2_0_0_mqtt_own_connection_t;
typedef struct fermyon_spin_2_0_0_mqtt_borrow_connection_t {
  int32_t __handle;
} fermyon_spin_2_0_0_mqtt_borrow_connection_t;
// The message payload.
typedef struct fermyon_spin_2_0_0_mqtt_payload_t {
  uint8_t   *ptr;
  size_t len;
} fermyon_spin_2_0_0_mqtt_payload_t;
typedef struct {
  bool is_err;
  union {
    fermyon_spin_2_0_0_mqtt_own_connection_t ok;
    fermyon_spin_2_0_0_mqtt_error_t err;
  } val;
} fermyon_spin_2_0_0_mqtt_result_own_connection_error_t;
typedef struct {
  bool is_err;
  union {
    fermyon_spin_2_0_0_mqtt_error_t err;
  } val;
} fermyon_spin_2_0_0_mqtt_result_void_error_t;
// Errors related to interacting with a database.
typedef struct fermyon_spin_2_0_0_rdbms_types_error_t {
  uint8_t tag;
  union {
    http_trigger_string_t     connection_failed;
    http_trigger_string_t     bad_parameter;
    http_trigger_string_t     query_failed;
    http_trigger_string_t     value_conversion_failed;
    http_trigger_string_t     other;
  } val;
} fermyon_spin_2_0_0_rdbms_types_error_t;
// Data types for a database column
typedef uint8_t fermyon_spin_2_0_0_rdbms_types_db_data_type_t;
// Database values
typedef struct fermyon_spin_2_0_0_rdbms_types_db_value_t {
  uint8_t tag;
  union {
    bool     boolean;
    int8_t     int8;
    int16_t     int16;
    int32_t     int32;
    int64_t     int64;
    uint8_t     uint8;
    uint16_t     uint16;
    uint32_t     uint32;
    uint64_t     uint64;
    float     floating32;
    double     floating64;
    http_trigger_string_t     str;
    http_trigger_list_u8_t     binary;
  } val;
} fermyon_spin_2_0_0_rdbms_types_db_value_t;
// Values used in parameterized queries
typedef struct fermyon_spin_2_0_0_rdbms_types_parameter_value_t {
  uint8_t tag;
  union {
    bool     boolean;
    int8_t     int8;
    int16_t     int16;
    int32_t     int32;
    int64_t     int64;
    uint8_t     uint8;
    uint16_t     uint16;
    uint32_t     uint32;
    uint64_t     uint64;
    float     floating32;
    double     floating64;
    http_trigger_string_t     str;
    http_trigger_list_u8_t     binary;
  } val;
} fermyon_spin_2_0_0_rdbms_types_parameter_value_t;
// A database column
typedef struct fermyon_spin_2_0_0_rdbms_types_column_t {
  http_trigger_string_t   name;
  fermyon_spin_2_0_0_rdbms_types_db_data_type_t   data_type;
} fermyon_spin_2_0_0_rdbms_types_column_t;
// A database row
typedef struct fermyon_spin_2_0_0_rdbms_types_row_t {
  fermyon_spin_2_0_0_rdbms_types_db_value_t   *ptr;
  size_t len;
} fermyon_spin_2_0_0_rdbms_types_row_t;
typedef struct {
  fermyon_spin_2_0_0_rdbms_types_column_t *ptr;
  size_t len;
} fermyon_spin_2_0_0_rdbms_types_list_column_t;
typedef struct {
  fermyon_spin_2_0_0_rdbms_types_row_t *ptr;
  size_t len;
} fermyon_spin_2_0_0_rdbms_types_list_row_t;
// A set of database rows
typedef struct fermyon_spin_2_0_0_rdbms_types_row_set_t {
  fermyon_spin_2_0_0_rdbms_types_list_column_t   columns;
  fermyon_spin_2_0_0_rdbms_types_list_row_t   rows;
} fermyon_spin_2_0_0_rdbms_types_row_set_t;
typedef fermyon_spin_2_0_0_rdbms_types_parameter_value_t fermyon_spin_2_0_0_postgres_parameter_value_t;
typedef fermyon_spin_2_0_0_rdbms_types_row_set_t fermyon_spin_2_0_0_postgres_row_set_t;
typedef fermyon_spin_2_0_0_rdbms_types_error_t fermyon_spin_2_0_0_postgres_error_t;
typedef struct fermyon_spin_2_0_0_postgres_own_connection_t {
  int32_t __handle;
} fermyon_spin_2_0_0_postgres_own_connection_t;
typedef struct fermyon_spin_2_0_0_postgres_borrow_connection_t {
  int32_t __handle;
} fermyon_spin_2_0_0_postgres_borrow_connection_t;
typedef struct {
  bool is_err;
  union {
    fermyon_spin_2_0_0_postgres_own_connection_t ok;
    fermyon_spin_2_0_0_postgres_error_t err;
  } val;
} fermyon_spin_2_0_0_postgres_result_own_connection_error_t;
typedef struct {
  fermyon_spin_2_0_0_postgres_parameter_value_t *ptr;
  size_t len;
} fermyon_spin_2_0_0_postgres_list_parameter_value_t;
typedef struct {
  bool is_err;
  union {
    fermyon_spin_2_0_0_postgres_row_set_t ok;
    fermyon_spin_2_0_0_postgres_error_t err;
  } val;
} fermyon_spin_2_0_0_postgres_result_row_set_error_t;
typedef struct {
  bool is_err;
  union {
    uint64_t ok;
    fermyon_spin_2_0_0_postgres_error_t err;
  } val;
} fermyon_spin_2_0_0_postgres_result_u64_error_t;
typedef fermyon_spin_2_0_0_rdbms_types_parameter_value_t fermyon_spin_2_0_0_mysql_parameter_value_t;
typedef fermyon_spin_2_0_0_rdbms_types_row_set_t fermyon_spin_2_0_0_mysql_row_set_t;
typedef fermyon_spin_2_0_0_rdbms_types_error_t fermyon_spin_2_0_0_mysql_error_t;
typedef struct fermyon_spin_2_0_0_mysql_own_connection_t {
  int32_t __handle;
} fermyon_spin_2_0_0_mysql_own_connection_t;
typedef struct fermyon_spin_2_0_0_mysql_borrow_connection_t {
  int32_t __handle;
} fermyon_spin_2_0_0_mysql_borrow_connection_t;
typedef struct {
  bool is_err;
  union {
    fermyon_spin_2_0_0_mysql_own_connection_t ok;
    fermyon_spin_2_0_0_mysql_error_t err;
  } val;
} fermyon_spin_2_0_0_mysql_result_own_connection_error_t;
typedef struct {
  fermyon_spin_2_0_0_mysql_parameter_value_t *ptr;
  size_t len;
} fermyon_spin_2_0_0_mysql_list_parameter_value_t;
typedef struct {
  bool is_err;
  union {
    fermyon_spin_2_0_0_mysql_row_set_t ok;
    fermyon_spin_2_0_0_mysql_error_t err;
  } val;
} fermyon_spin_2_0_0_mysql_result_row_set_error_t;
typedef struct {
  bool is_err;
  union {
    fermyon_spin_2_0_0_mysql_error_t err;
  } val;
} fermyon_spin_2_0_0_mysql_result_void_error_t;
typedef struct fermyon_spin_2_0_0_sqlite_own_connection_t {
  int32_t __handle;
} fermyon_spin_2_0_0_sqlite_own_connection_t;
typedef struct fermyon_spin_2_0_0_sqlite_borrow_connection_t {
  int32_t __handle;
} fermyon_spin_2_0_0_sqlite_borrow_connection_t;
// The set of errors which may be raised by functions in this interface
typedef struct fermyon_spin_2_0_0_sqlite_error_t {
  uint8_t tag;
  union {
    http_trigger_string_t     io;
  } val;
} fermyon_spin_2_0_0_sqlite_error_t;