zamna-spin/.zig-cache/o/74caa4b4e0853821cf59f10746e95f75/cimport.zig

pub const fermyon_spin_2_0_0_redis_result_s64_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_30 = @import("std").mem.zeroes(union_unnamed_30),
};
const union_unnamed_31 = extern union {
    ok: u32,
    err: fermyon_spin_2_0_0_redis_error_t,
};
pub const fermyon_spin_2_0_0_redis_result_u32_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_31 = @import("std").mem.zeroes(union_unnamed_31),
};
const union_unnamed_32 = extern union {
    ok: http_trigger_list_string_t,
    err: fermyon_spin_2_0_0_redis_error_t,
};
pub const fermyon_spin_2_0_0_redis_result_list_string_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_32 = @import("std").mem.zeroes(union_unnamed_32),
};
pub const fermyon_spin_2_0_0_redis_list_redis_parameter_t = extern struct {
    ptr: [*c]fermyon_spin_2_0_0_redis_redis_parameter_t = @import("std").mem.zeroes([*c]fermyon_spin_2_0_0_redis_redis_parameter_t),
    len: usize = @import("std").mem.zeroes(usize),
};
pub const fermyon_spin_2_0_0_redis_list_redis_result_t = extern struct {
    ptr: [*c]fermyon_spin_2_0_0_redis_redis_result_t = @import("std").mem.zeroes([*c]fermyon_spin_2_0_0_redis_redis_result_t),
    len: usize = @import("std").mem.zeroes(usize),
};
const union_unnamed_33 = extern union {
    ok: fermyon_spin_2_0_0_redis_list_redis_result_t,
    err: fermyon_spin_2_0_0_redis_error_t,
};
pub const fermyon_spin_2_0_0_redis_result_list_redis_result_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_33 = @import("std").mem.zeroes(union_unnamed_33),
};
const union_unnamed_34 = extern union {
    connection_failed: http_trigger_string_t,
    other: http_trigger_string_t,
};
pub const struct_fermyon_spin_2_0_0_mqtt_error_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_34 = @import("std").mem.zeroes(union_unnamed_34),
};
pub const fermyon_spin_2_0_0_mqtt_error_t = struct_fermyon_spin_2_0_0_mqtt_error_t;
pub const fermyon_spin_2_0_0_mqtt_qos_t = u8;
pub const struct_fermyon_spin_2_0_0_mqtt_own_connection_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const fermyon_spin_2_0_0_mqtt_own_connection_t = struct_fermyon_spin_2_0_0_mqtt_own_connection_t;
pub const struct_fermyon_spin_2_0_0_mqtt_borrow_connection_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const fermyon_spin_2_0_0_mqtt_borrow_connection_t = struct_fermyon_spin_2_0_0_mqtt_borrow_connection_t;
pub const struct_fermyon_spin_2_0_0_mqtt_payload_t = extern struct {
    ptr: [*c]u8 = @import("std").mem.zeroes([*c]u8),
    len: usize = @import("std").mem.zeroes(usize),
};
pub const fermyon_spin_2_0_0_mqtt_payload_t = struct_fermyon_spin_2_0_0_mqtt_payload_t;
const union_unnamed_35 = extern union {
    ok: fermyon_spin_2_0_0_mqtt_own_connection_t,
    err: fermyon_spin_2_0_0_mqtt_error_t,
};
pub const fermyon_spin_2_0_0_mqtt_result_own_connection_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_35 = @import("std").mem.zeroes(union_unnamed_35),
};
const union_unnamed_36 = extern union {
    err: fermyon_spin_2_0_0_mqtt_error_t,
};
pub const fermyon_spin_2_0_0_mqtt_result_void_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_36 = @import("std").mem.zeroes(union_unnamed_36),
};
const union_unnamed_37 = extern union {
    connection_failed: http_trigger_string_t,
    bad_parameter: http_trigger_string_t,
    query_failed: http_trigger_string_t,
    value_conversion_failed: http_trigger_string_t,
    other: http_trigger_string_t,
};
pub const struct_fermyon_spin_2_0_0_rdbms_types_error_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_37 = @import("std").mem.zeroes(union_unnamed_37),
};
pub const fermyon_spin_2_0_0_rdbms_types_error_t = struct_fermyon_spin_2_0_0_rdbms_types_error_t;
pub const fermyon_spin_2_0_0_rdbms_types_db_data_type_t = u8;
const union_unnamed_38 = extern union {
    boolean: bool,
    int8: i8,
    int16: i16,
    int32: i32,
    int64: i64,
    uint8: u8,
    uint16: u16,
    uint32: u32,
    uint64: u64,
    floating32: f32,
    floating64: f64,
    str: http_trigger_string_t,
    binary: http_trigger_list_u8_t,
};
pub const struct_fermyon_spin_2_0_0_rdbms_types_db_value_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_38 = @import("std").mem.zeroes(union_unnamed_38),
};
pub const fermyon_spin_2_0_0_rdbms_types_db_value_t = struct_fermyon_spin_2_0_0_rdbms_types_db_value_t;
const union_unnamed_39 = extern union {
    boolean: bool,
    int8: i8,
    int16: i16,
    int32: i32,
    int64: i64,
    uint8: u8,
    uint16: u16,
    uint32: u32,
    uint64: u64,
    floating32: f32,
    floating64: f64,
    str: http_trigger_string_t,
    binary: http_trigger_list_u8_t,
};
pub const struct_fermyon_spin_2_0_0_rdbms_types_parameter_value_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_39 = @import("std").mem.zeroes(union_unnamed_39),
};
pub const fermyon_spin_2_0_0_rdbms_types_parameter_value_t = struct_fermyon_spin_2_0_0_rdbms_types_parameter_value_t;
pub const struct_fermyon_spin_2_0_0_rdbms_types_column_t = extern struct {
    name: http_trigger_string_t = @import("std").mem.zeroes(http_trigger_string_t),
    data_type: fermyon_spin_2_0_0_rdbms_types_db_data_type_t = @import("std").mem.zeroes(fermyon_spin_2_0_0_rdbms_types_db_data_type_t),
};
pub const fermyon_spin_2_0_0_rdbms_types_column_t = struct_fermyon_spin_2_0_0_rdbms_types_column_t;
pub const struct_fermyon_spin_2_0_0_rdbms_types_row_t = extern struct {
    ptr: [*c]fermyon_spin_2_0_0_rdbms_types_db_value_t = @import("std").mem.zeroes([*c]fermyon_spin_2_0_0_rdbms_types_db_value_t),
    len: usize = @import("std").mem.zeroes(usize),
};
pub const fermyon_spin_2_0_0_rdbms_types_row_t = struct_fermyon_spin_2_0_0_rdbms_types_row_t;
pub const fermyon_spin_2_0_0_rdbms_types_list_column_t = extern struct {
    ptr: [*c]fermyon_spin_2_0_0_rdbms_types_column_t = @import("std").mem.zeroes([*c]fermyon_spin_2_0_0_rdbms_types_column_t),
    len: usize = @import("std").mem.zeroes(usize),
};
pub const fermyon_spin_2_0_0_rdbms_types_list_row_t = extern struct {
    ptr: [*c]fermyon_spin_2_0_0_rdbms_types_row_t = @import("std").mem.zeroes([*c]fermyon_spin_2_0_0_rdbms_types_row_t),
    len: usize = @import("std").mem.zeroes(usize),
};
pub const struct_fermyon_spin_2_0_0_rdbms_types_row_set_t = extern struct {
    columns: fermyon_spin_2_0_0_rdbms_types_list_column_t = @import("std").mem.zeroes(fermyon_spin_2_0_0_rdbms_types_list_column_t),
    rows: fermyon_spin_2_0_0_rdbms_types_list_row_t = @import("std").mem.zeroes(fermyon_spin_2_0_0_rdbms_types_list_row_t),
};
pub const fermyon_spin_2_0_0_rdbms_types_row_set_t = struct_fermyon_spin_2_0_0_rdbms_types_row_set_t;
pub const fermyon_spin_2_0_0_postgres_parameter_value_t = fermyon_spin_2_0_0_rdbms_types_parameter_value_t;
pub const fermyon_spin_2_0_0_postgres_row_set_t = fermyon_spin_2_0_0_rdbms_types_row_set_t;
pub const fermyon_spin_2_0_0_postgres_error_t = fermyon_spin_2_0_0_rdbms_types_error_t;
pub const struct_fermyon_spin_2_0_0_postgres_own_connection_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const fermyon_spin_2_0_0_postgres_own_connection_t = struct_fermyon_spin_2_0_0_postgres_own_connection_t;
pub const struct_fermyon_spin_2_0_0_postgres_borrow_connection_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const fermyon_spin_2_0_0_postgres_borrow_connection_t = struct_fermyon_spin_2_0_0_postgres_borrow_connection_t;
const union_unnamed_40 = extern union {
    ok: fermyon_spin_2_0_0_postgres_own_connection_t,
    err: fermyon_spin_2_0_0_postgres_error_t,
};
pub const fermyon_spin_2_0_0_postgres_result_own_connection_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_40 = @import("std").mem.zeroes(union_unnamed_40),
};
pub const fermyon_spin_2_0_0_postgres_list_parameter_value_t = extern struct {
    ptr: [*c]fermyon_spin_2_0_0_postgres_parameter_value_t = @import("std").mem.zeroes([*c]fermyon_spin_2_0_0_postgres_parameter_value_t),
    len: usize = @import("std").mem.zeroes(usize),
};
const union_unnamed_41 = extern union {
    ok: fermyon_spin_2_0_0_postgres_row_set_t,
    err: fermyon_spin_2_0_0_postgres_error_t,
};
pub const fermyon_spin_2_0_0_postgres_result_row_set_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_41 = @import("std").mem.zeroes(union_unnamed_41),
};
const union_unnamed_42 = extern union {
    ok: u64,
    err: fermyon_spin_2_0_0_postgres_error_t,
};
pub const fermyon_spin_2_0_0_postgres_result_u64_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_42 = @import("std").mem.zeroes(union_unnamed_42),
};
pub const fermyon_spin_2_0_0_mysql_parameter_value_t = fermyon_spin_2_0_0_rdbms_types_parameter_value_t;
pub const fermyon_spin_2_0_0_mysql_row_set_t = fermyon_spin_2_0_0_rdbms_types_row_set_t;
pub const fermyon_spin_2_0_0_mysql_error_t = fermyon_spin_2_0_0_rdbms_types_error_t;
pub const struct_fermyon_spin_2_0_0_mysql_own_connection_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const fermyon_spin_2_0_0_mysql_own_connection_t = struct_fermyon_spin_2_0_0_mysql_own_connection_t;
pub const struct_fermyon_spin_2_0_0_mysql_borrow_connection_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const fermyon_spin_2_0_0_mysql_borrow_connection_t = struct_fermyon_spin_2_0_0_mysql_borrow_connection_t;
const union_unnamed_43 = extern union {
    ok: fermyon_spin_2_0_0_mysql_own_connection_t,
    err: fermyon_spin_2_0_0_mysql_error_t,
};
pub const fermyon_spin_2_0_0_mysql_result_own_connection_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_43 = @import("std").mem.zeroes(union_unnamed_43),
};
pub const fermyon_spin_2_0_0_mysql_list_parameter_value_t = extern struct {
    ptr: [*c]fermyon_spin_2_0_0_mysql_parameter_value_t = @import("std").mem.zeroes([*c]fermyon_spin_2_0_0_mysql_parameter_value_t),
    len: usize = @import("std").mem.zeroes(usize),
};
const union_unnamed_44 = extern union {
    ok: fermyon_spin_2_0_0_mysql_row_set_t,
    err: fermyon_spin_2_0_0_mysql_error_t,
};
pub const fermyon_spin_2_0_0_mysql_result_row_set_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_44 = @import("std").mem.zeroes(union_unnamed_44),
};
const union_unnamed_45 = extern union {
    err: fermyon_spin_2_0_0_mysql_error_t,
};
pub const fermyon_spin_2_0_0_mysql_result_void_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_45 = @import("std").mem.zeroes(union_unnamed_45),
};
pub const struct_fermyon_spin_2_0_0_sqlite_own_connection_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const fermyon_spin_2_0_0_sqlite_own_connection_t = struct_fermyon_spin_2_0_0_sqlite_own_connection_t;
pub const struct_fermyon_spin_2_0_0_sqlite_borrow_connection_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const fermyon_spin_2_0_0_sqlite_borrow_connection_t = struct_fermyon_spin_2_0_0_sqlite_borrow_connection_t;
const union_unnamed_46 = extern union {
    io: http_trigger_string_t,
};
pub const struct_fermyon_spin_2_0_0_sqlite_error_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_46 = @import("std").mem.zeroes(union_unnamed_46),
};
pub const fermyon_spin_2_0_0_sqlite_error_t = struct_fermyon_spin_2_0_0_sqlite_error_t;
